src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__assign_cmp_expression_to_bool.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 2841
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { i8, i8, i8 }

@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  %a = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %b = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  %result = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 2
  %load_a = load i8, i8* %a, align 1
  %1 = zext i8 %load_a to i32
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %entry
  %load_b = load i8, i8* %b, align 1
  %4 = zext i8 %load_b to i32
  br label %5

5:                                                ; preds = %3, %entry
  %6 = phi i32 [ %1, %entry ], [ %4, %3 ]
  %7 = trunc i32 %6 to i8
  store i8 %7, i8* %result, align 1
  ret void
}

