src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__for_statement_with_continue.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 816
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { i32 }

@prg_instance = global %prg_interface zeroinitializer

define void @prg(%prg_interface* %0) {
entry:
  %x = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  store i32 3, i32* %x, align 4
  br label %condition_check

condition_check:                                  ; preds = %increment, %entry
  %load_x = load i32, i32* %x, align 4
  %load_x1 = load i32, i32* %x, align 4
  %tmpVar = icmp sle i32 %load_x1, 10
  br i1 %tmpVar, label %4, label %5

for_body:                                         ; preds = %2
  %load_x8 = load i32, i32* %x, align 4
  %tmpVar9 = add i32 %load_x8, 1
  store i32 %tmpVar9, i32* %x, align 4
  br label %increment

buffer_block:                                     ; No predecessors!
  %load_x10 = load i32, i32* %x, align 4
  %tmpVar11 = sub i32 %load_x10, 1
  store i32 %tmpVar11, i32* %x, align 4
  br label %increment

increment:                                        ; preds = %buffer_block, %for_body
  %tmpVar12 = add i32 %load_x, 7
  store i32 %tmpVar12, i32* %x, align 4
  br label %condition_check

continue:                                         ; preds = %2
  ret void

1:                                                ; preds = %5
  %load_x4 = load i32, i32* %x, align 4
  %tmpVar5 = icmp sge i32 %load_x4, 10
  br i1 %tmpVar5, label %7, label %8

2:                                                ; preds = %8, %5
  %3 = phi i1 [ %6, %5 ], [ %9, %8 ]
  br i1 %3, label %for_body, label %continue

4:                                                ; preds = %condition_check
  %load_x2 = load i32, i32* %x, align 4
  %tmpVar3 = icmp sge i32 %load_x2, 3
  br label %5

5:                                                ; preds = %4, %condition_check
  %6 = phi i1 [ %tmpVar, %condition_check ], [ %tmpVar3, %4 ]
  br i1 %6, label %2, label %1

7:                                                ; preds = %1
  %load_x6 = load i32, i32* %x, align 4
  %tmpVar7 = icmp sle i32 %load_x6, 3
  br label %8

8:                                                ; preds = %7, %1
  %9 = phi i1 [ %tmpVar5, %1 ], [ %tmpVar7, %7 ]
  br label %2
}

