src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__if_generator_test.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 761
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { i32, i8 }

@prg_instance = global %prg_interface zeroinitializer

define void @prg(%prg_interface* %0) {
entry:
  %x = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  %b1 = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 1
  %load_b1 = load i8, i8* %b1, align 1
  %1 = icmp ne i8 %load_b1, 0
  br i1 %1, label %condition_body, label %continue

condition_body:                                   ; preds = %entry
  %load_x = load i32, i32* %x, align 4
  br label %continue

continue:                                         ; preds = %condition_body, %entry
  ret void
}

