src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__if_with_expression_generator_test.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 779
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { i32, i8 }

@prg_instance = global %prg_interface zeroinitializer

define void @prg(%prg_interface* %0) {
entry:
  %x = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  %b1 = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 1
  %load_x = load i32, i32* %x, align 4
  %tmpVar = icmp sgt i32 %load_x, 1
  %1 = zext i1 %tmpVar to i32
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

condition_body:                                   ; preds = %5
  %load_x1 = load i32, i32* %x, align 4
  br label %continue

continue:                                         ; preds = %condition_body, %5
  ret void

3:                                                ; preds = %entry
  %load_b1 = load i8, i8* %b1, align 1
  %4 = zext i8 %load_b1 to i32
  br label %5

5:                                                ; preds = %3, %entry
  %6 = phi i32 [ %1, %entry ], [ %4, %3 ]
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %condition_body, label %continue
}

